--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    background-color: #00f000;
+    background-color: white;
+    padding: 40px;
 
 }
 h1{
